tests/negative/rename_old.lu
require "godot"

class RenameOldDependency
end
